--- a/index.RMD
+++ b/index.RMD
@@ -1,14 +1,23 @@
 ---
 title: "Web Page Set Up"
 author: "Crysta Gantz"
-date: "5/13/2021"
+date: "3/9/2022"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+git status 
 
+git add -A 
+
+git commit -am '<message>'
+
+git push 
+
+git pull 
+/
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
