--- a/index.RMD
+++ b/index.RMD
@@ -18,6 +18,8 @@ git push
 
 git pull 
 
+wear a mask
+
 ## R Markdown
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
